# mlx

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
examples/cpp/: BUILD.bazel  basic_sort.cpp  gather.cpp  scatter.cpp  sort.cpp
mlx/: mlx.h  ops.cpp  ops.h  primitives.h  random.cpp  random.h
mlx/backend/common/: sort.h
mlx/backend/cpu/: make_compiled_preamble.sh
mlx/backend/metal/: device.cpp  jit_kernels.cpp  kernels.h  make_compiled_preamble.sh  nojit_kernels.cpp  sort.cpp
mlx/backend/metal/jit/: binary_ops.cpp  utils.cpp
mlx/backend/metal/kernels/: complex.h  sort.h  sort.metal
mlx/backend/no_metal/: primitives.cpp
mlx/types/: complex.h
