cc_binary(
    name = "gather",
    srcs = ["gather.cpp"],
    deps = ["@mlx//:libmlx", "@range-v3"]
)

cc_binary(
    name = "scatter",
    srcs = ["scatter.cpp"],
    deps = ["@mlx//:libmlx", "@range-v3"]
)

cc_binary(
    name = "sort",
    srcs = ["sort.cpp"],
    deps = ["@mlx//:libmlx", "@range-v3"]
)

cc_binary(
    name = "basic_sort",
    srcs = ["basic_sort.cpp"],
    deps = ["@mlx//:libmlx", "@range-v3"]
)